--- a/supplementary_material.ipynb
+++ b/supplementary_material.ipynb
@@ -5,7 +5,7 @@
    "id": "05738c87",
    "metadata": {},
    "source": [
-    "# Supplementary material: Weakening and strengthening the local irregularity of digraphs"
+    "# Supplementary material: Weak and strong local irregularity of digraphs"
    ]
   },
   {
